--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ android {
 }
 
 dependencies {
-
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:27.0.2'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:27.0.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -43,6 +46,13 @@ dependencies {
 }
 dependencies {
 
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.2'
+    implementation 'androidx.navigation:navigation-ui:2.3.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:multidex:1.0.3' //enter the latest version
 }
