--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BiGBeDPharmacie">
-        <activity android:name=".PharmacieProfile"></activity>
+        <activity
+            android:name=".Menu_bar"
+            android:theme="@style/Theme.Design.NoActionBar" />
+        <activity android:name=".PharmacieProfile"
+            />
         <activity android:name=".AboutUsActivity" />
         <activity
             android:name=".ResetPassword"
