--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,11 @@ dependencies {
 dependencies {
 
 
+    implementation 'com.android.support:recyclerview-selection:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.2'
