--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 dependencies {
 
 
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.android.support:recyclerview-selection:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
