--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
+    implementation 'org.osmdroid:osmdroid-android:5.6.5'
+
 
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
