--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="master.STRI.bigbedpharmacie">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,9 +22,6 @@
             android:name=".client.ClientProfile"
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.BiGBeDPharmacie.NoActionBar" />
-        <activity
-            android:name=".Menu_bar"
-            android:theme="@style/Theme.Design.NoActionBar" />
         <activity android:name=".pharmacie.PharmacieProfile" />
         <activity android:name=".AboutUsActivity" />
         <activity
