--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="master.STRI.bigbedpharmacie">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BiGBeDPharmacie">
-        <activity android:name=".client.DesplayPharmacieInfo"
+        <activity android:name=".helpMe"></activity>
+        <activity
+            android:name=".client.DesplayPharmacieInfo"
             android:parentActivityName=".client.ClientProfile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
