--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BiGBeDPharmacie">
-        <activity android:name=".pharmacie.updatProfile"></activity>
+        <activity android:name=".pharmacie.updateService"></activity>
+        <activity android:name=".pharmacie.updatProfile" />
         <activity android:name=".helpMe" />
         <activity
             android:name=".client.DesplayPharmacieInfo"
